hard-gists/3015852/run.log
=== Docker Run Log for 3015852 ===
Started at: Mi 29. Okt 13:36:53 CET 2025

[2025-10-29 13:36:54] START: Running container for 3015852
[2025-10-29 13:36:54] SUCCESS: Container 55dd089ef7099a1d17908c6725e13cabc49068485e0674be86996100d2612942 started for 3015852
=== Container logs for 3015852 ===
  File "/snippet.py", line 169
    except NoSuchElementException, e: return False
           ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3015852 ===
[2025-10-29 13:36:56] INFO: Container 55dd089ef7099a1d17908c6725e13cabc49068485e0674be86996100d2612942 has stopped
